{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 47,
  "lineage": "d7551257-b793-9076-805b-46b7a1c1fcd7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ttvk-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:security-group/sg-0dfe4cf9defda886d",
            "description": "Allow basic access from external",
            "egress": [],
            "id": "sg-0dfe4cf9defda886d",
            "ingress": [],
            "name": "ttvk-01-external-access",
            "name_prefix": "",
            "owner_id": "936026591534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Security Group ttvk-01 for external access",
              "Environment": "day-01",
              "Name": "ttvk-01-external-access"
            },
            "timeouts": null,
            "vpc_id": "vpc-9e603ff6"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ttvk-webaccess",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:936026591534:security-group/sg-00bfafe7a2ea4a843",
            "description": "Allow web access from external",
            "egress": [],
            "id": "sg-00bfafe7a2ea4a843",
            "ingress": [],
            "name": "ttvk-webaccess",
            "name_prefix": "",
            "owner_id": "936026591534",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Security Group ttvk-01 for web access",
              "Environment": "day-01",
              "Name": "ttvk-01-webaccess"
            },
            "timeouts": null,
            "vpc_id": "vpc-9e603ff6"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}